--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-vue-app",
-  "version": "0.0.0",
+  "name": "blackworkbroadway",
+  "version": "0.1.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
