--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,14 +1,13 @@
 {
         "include": [
-                "./src/**/*",
+                "./src/**/*"
         ],
         "compilerOptions": {
                 "baseUrl": ".",
-                "paths":{
+                "paths": {
                         "@/*": [
                                 "./src/*"
                         ]
-                },
-                
+                }
         }
 }
