--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@vitejs/plugin-vue": "^1.9.3",
     "@vue/cli-plugin-router": "^4.5.15",
     "sass": "^1.43.4",
