--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": " NODE_ENV=production vite build",
     "serve": "vite preview"
   },
   "dependencies": {
