--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "vite",
-    "build": " NODE_ENV=production vite build",
+    "build": "NODE_ENV=production vite build",
     "serve": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "vue": "^3.2.16",
-    "vue-router": "^4.0.12"
+    "@kangc/v-md-editor": "^1.7.11",
+    "@vue/reactivity": "^3.2.37",
+    "@vue/runtime-core": "^3.2.37",
+    "axios": "^0.27.2",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/cli-plugin-router": "^4.5.15",
-    "sass": "^1.43.4",
-    "vite": "^2.6.4"
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "sass": "^1.54.4",
+    "vite": "^3.0.7"
   }
 }
