--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blackworkbroadway",
   "version": "0.1.0",
   "scripts": {
-    "dev": "vite",
+    "dev": " NODE_ENV=development vite",
     "build": "NODE_ENV=production vite build",
     "serve": "vite preview"
   },
